# mocap2gt

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md  run_format.sh
app/: data_simulator.cc  gt_estimator.cc
include/mocap2gt/ceres_estimator/: mocap2gt_estimator.h  pose_pq_parameterization.h  rot_rp_parameterization.h
include/mocap2gt/ceres_factor/: imu_preintegration_factor.h  mocap_interpolation_factor.h  mocap_interpolation_variable_factor.h
include/mocap2gt/initializer/: extrinsic_initializer.h  time_offset_initializer.h
include/mocap2gt/sensor_meas/: imu_meas_manager.h  imu_preintegrator.h  mocap_meas_manager_base.h  mocap_meas_manager_linear.h  mocap_meas_manager_spline.h
include/mocap2gt/utils/: config_parser.h  data_reader.h  geometry_utils.h  printer.h  simulator_param.h
module_test/: config_parser_test.cc  imu_manager_test.cc  imu_preinteg_factor_test.cc  imu_preintegrator_test.cc  initializer_test.cc  mocap_interp_factor_test.cc  mocap_manager_test.cc  printer_test.cc
resource/estimator_test_data/: estimator_config.yaml  imu_data.txt  mocap2gt_calib.yaml  mocap2gt_traj.txt  mocap_data.txt
resource/initializer_test_data/: estimator_config.yaml  imu_data.txt  mocap_data.txt
resource/simulator_test_data/: estimator_config.yaml  imu_data.txt  mocap2gt_calib.yaml  mocap2gt_traj.txt  mocap_data.txt  simulator_config.yaml
src/ceres_estimator/: mocap2gt_estimator.cc  pose_pq_parameterization.cc  rot_rp_parameterization.cc
src/ceres_factor/: imu_preintegration_factor.cc  mocap_interpolation_factor.cc  mocap_interpolation_variable_factor.cc
src/initializer/: extrinsic_initializer.cc  time_offset_initializer.cc
src/sensor_meas/: imu_meas_manager.cc  imu_preintegrator.cc  mocap_meas_manager_base.cc  mocap_meas_manager_linear.cc  mocap_meas_manager_spline.cc
src/utils/: config_parser.cc  printer.cc  simulator_param.cc
